# Music-Classifier-ML

./: .coverage  .pre-commit-config.yaml  Makefile  PrepareInput.py  README.md  azure-pipelines.yml  projectOrg.md  pyproject.toml  test-output.xml  testfile.txt
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: CI.yml  create_test.yml
docs/: requirements.txt
src/: train.py
src/data/: PrepareInput.py  make_dataset.py
src/models/: train_model.py
tests/: test_app.py  tests_MGR.py
utils/: check-tabs.sh
