[tool.poetry]
name = "music-classifier-ml"
version = "0.1.0"
description = ""
authors = ["Zalasyu <alec_moldovan@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
librosa = "^0.9.2"

[tool.poetry.dev-dependencies]
morgan = "^0.12.3"
tqdm = "^4.64.1"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
