[tool.poetry]
name = "music-classifier-ml"
version = "0.1.0"
description = ""
authors = ["Zalasyu <alec_moldovan@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
librosa = "^0.9.2"
torchaudio = "^0.12.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]
morgan = "^0.12.3"
tqdm = "^4.64.1"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.4"
coverage = "^6.5.0"
isort = "^5.10.1"

[tool.black]
line-length = 132
target-version = ['py37', 'py38', 'py39', 'py310' ]
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''
[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    'tests'
]


[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
