[tool.poetry]
name = "music-classifier-ml"
version = "0.1.0"
description = ""
authors = ["Zalasyu <alec_moldovan@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
librosa = "^0.9.2"
torchaudio = "^0.12.1"
torchvision = "^0.13.1"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
morgan = "^0.12.3"
tqdm = "^4.64.1"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"